# Simplified_Error_Registry

./: .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.template  Everyday_coding_instructions.md  Project_Setup_Instructions.md  README.md  coverage.xml  docker-compose.yml  docker-compose.yml.template  prompt_to_prompt_LLM.txt  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  setup.cfg  start.bat
.cursor/rules/: 00-bootstrap-global.mdc
.github/workflows/: README.md  ci.yml
config/: __init__.py  exceptions.py  logging.py  settings.py
docs/: API_REFERENCE.md  CONSOLIDATION_APP_USAGE.md  DEPENDENCY_MANAGEMENT.md  PHASE_4_6_REVIEW.md  PORTS.md  PROJECT_STATUS.md  SER_IMPLEMENTATION_PLAN.md  SER_PLAN.md  SIMPLIFIED_ERROR_REGISTRY.md  SIMPLIFIED_ERROR_REGISTRY_SQT.md  SIMPLIFIED_ERROR_REGISTRY_V2.md  TASK_AUTOMATION.md  TESTING.md  TEST_OUTPUT_CAPTURE.md  agent_workflow_tests.md  {PROJECT_NAME}_IMPLEMENTATION_PLAN.md  {PROJECT_NAME}_PLAN.md
docs/cursor_docs/: docs-static_cloud-agents-openapi.yaml.md  docs.md  docs_1.md  docs_account_pricing.md  docs_account_teams_admin-api.md  docs_account_teams_ai-code-tracking-api.md  docs_account_teams_analytics-api.md  docs_account_teams_analytics.md  docs_account_teams_dashboard.md  docs_account_teams_members.md  docs_account_teams_pricing.md  docs_account_teams_scim.md  docs_account_teams_setup.md  docs_account_teams_sso.md  docs_account_update-access.md  docs_agent_autocomplete.md  docs_agent_browser.md  docs_agent_chat_checkpoints.md  docs_agent_chat_commands.md  docs_agent_chat_duplicate.md  docs_agent_chat_export.md  docs_agent_chat_history.md  docs_agent_chat_summarization.md  docs_agent_chat_tabs.md  docs_agent_commands.md  docs_agent_hooks.md  (+75 more)
frontend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: bootstrap_errors_fixes.py  check_dependencies.py  freeze_and_audit.py  git_push.py  run_ci_locally.py  smart_test_detection.py  test_backend.py  test_frontend.py  test_integration.py
src/: workflow_demo.py
tests/: __init__.py  conftest.py  test_config_logging.py  test_config_settings.py  test_consolidation_app_config.py  test_consolidation_app_consolidation.py  test_consolidation_app_deduplicator.py  test_consolidation_app_deduplicator_ai.py  test_consolidation_app_discovery.py  test_consolidation_app_generator.py  test_consolidation_app_llm_client.py  test_consolidation_app_main.py  test_consolidation_app_merger.py  test_consolidation_app_parser.py  test_consolidation_app_rule_extractor.py  test_consolidation_app_tagger.py  test_consolidation_app_tagger_ai.py  test_consolidation_app_writer.py  test_docs_port_registry.py  test_example.py  test_scripts_bootstrap_errors_fixes.py  test_scripts_freeze_and_audit.py  test_scripts_git_push.py  test_scripts_pre_commit_checks.py  test_scripts_test_backend.py  test_scripts_test_frontend.py  test_scripts_test_integration.py  test_verify_integration_output_capture.py  test_verify_output_capture.py  test_workflow_demo.py
(+31 files in other folders)
